--- a/app/manifest.json
+++ b/app/manifest.json
@@ -4,14 +4,14 @@
 	"name": "Fstage",
 	"short_name": "Fstage",
 	"description": "Example Fstage app",
-	"start_url": "http://localhost/",
-	"scope": "/",
+	"start_url": ".",
+	"scope": ".",
 	"display": "standalone",
 	"theme_color": "#00425e",
 	"background_color": "#ffffff",
 	"icons": [
 		{
-			"src": "img/logo/icon.png",
+			"src": "img/logo.png",
 			"type": "image/png",
 			"sizes": "160x160"
 		}
