--- a/package.json
+++ b/package.json
@@ -17,11 +17,8 @@
 		"./form": {
 			"import": "./src/js/form/index.mjs"
 		},
-		"./hls": {
-			"import": "./src/js/hls/index.mjs"
-		},
 		"./ipfs": {
-			"import": "./src/js/ipfs/index.mjs"
+			"import": "./src/js/ipfs/index-node.mjs"
 		},
 		"./observe": {
 			"import": "./src/js/observe/index.mjs"
@@ -40,7 +37,10 @@
 		}
 	},
 	"dependencies": {
-		"hls.js": "latest",
-		"ipfs": "latest"
+		"helia": "latest",
+		"@helia/unixfs": "latest",
+		"datastore-level": "latest",
+		"blockstore-level": "latest",
+		"multiformats": "latest"
 	}
 }
